--- a/src/plugin.yml
+++ b/src/plugin.yml
@@ -1,3 +1,6 @@
 name: ClickSortLite
+description: Sort inventories with middle click.
 main: cl.netgamer.clicksortlite.MainPlugin
-version: 1
+# fixes: v1 exception with items in 2nd half large chests (by adding legacy air)
+api-version: 1.13
+version: 2
